Added send button and function for L4 and L5

--- a/app/src/main/res/layout/fragment_lec5.xml
+++ b/app/src/main/res/layout/fragment_lec5.xml
@@ -110,4 +110,11 @@
         android:text="@string/C5_P7"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
+    <Button
+        android:id="@+id/l5_send_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10px"
+        android:text="@string/send_btn" />
+
 </LinearLayout>
