--- a/app/src/main/res/layout/fragment_lec4.xml
+++ b/app/src/main/res/layout/fragment_lec4.xml
@@ -172,4 +172,11 @@
         android:text="@string/C4_P11"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
+    <Button
+        android:id="@+id/l4_send_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10px"
+        android:text="@string/send_btn" />
+
 </LinearLayout>
